--- a/期末/期末.md
+++ b/期末/期末.md
@@ -129,7 +129,7 @@ struct identifier {
 * 交叉編譯器: 輸出可以運行於不同的平台之上的編譯器。
 * 嵌入式系統通常沒有軟件開發環境，因此，為這類系統開發軟件時，通常需要使用交叉編譯器
 ### lexer  
-# c4-c in 4 functions 虚拟机分析
+# c4-c in 4 functions 虛擬機分析
 ```
 int *pc, *sp, *bp, a, cycle; 
 ```
